<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aitor.cuandovasamorir.MainActivity"
    android:background="#F27F20">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/intro"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:layout_weight="0.14" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08">

            <TextView
                android:text="@string/nombre"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etNombre" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.09">

            <TextView
                android:text="@string/fechaNac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/fecha_nacimiento"
                android:hint="@string/from_date" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_weight="0.14">

            <TextView
                android:text="@string/sexo"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:elevation="1dp"
                android:layout_width="154dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Spinner
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_weight="0.31"
                android:entries="@array/sexo" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.16">

            <TextView
                android:text="@string/LugarNac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etLugarNac" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:text="@string/comprueba"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/btnComprueba"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="#4C4C50"
        android:textColor="@android:color/background_light" />

</RelativeLayout>
